Fixed alignent of videos on index.php

--- a/style.css
+++ b/style.css
@@ -174,13 +174,15 @@ h3 {
 	display: block;
  }
 
+.gap{
+	margin:0 10px;
+}
 
 .previewimg{
 	position: relative;
 	max-width:100%;
 	height: auto;
 	display: block;
-	margin: 0 10px;
 }
 
 #vrbutton{
@@ -464,11 +466,16 @@ opacity:0.8;
 	height: 100%;
 	background: rgba(0,0,0,0.3);
 	transition: 0.5s;
-	margin:0 10px;
 	padding: 0px;
 	position: absolute;
 	color: #fff;
 	overflow: hidden;
+}
+
+ .gap{
+	margin:0 10px;
+}
+
 }
 
 .slide{
@@ -603,11 +610,9 @@ input:checked + .slider:before {
 }
 
 
-
 .ranking{
 	position: absolute;
 	top:0;
-	margin: 0 10px ;
 	width:100%;
 	height:100%;
 	background: rgba(0,0,0,0.2);
